<resources>
    <string name="app_name">FHICT companion</string>

    <!-- Menu strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="people">People</string>
    <string name="schedule">Schedule</string>
    <string name="news">News</string>
    <string name="results">Results</string>
    <string name="please_log_in_first">Please log in first</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="description_placeholder">Description text and stuff</string>
    <string name="header_placeholder">Header</string>

    <string name="author_template">Author</string>
    <string name="amount">Amount</string>
    <string name="sort_alphabetical">Sort alphabetical</string>
    <string name="sort_by_grade">Sort by grade</string>
    <string name="time_placeholder">time</string>
    <string name="course_placeholder">course</string>
    <string name="room_placeholder">room</string>
    <string name="teacher_placeholder">teacher</string>
    <string name="no_data">No data</string>
    <string name="search">Search</string>
    <string name="people_search_hint">Part of name/office/Id</string>

    <string name="mail">Mail:</string>
    <string name="id">Id:</string>
    <string name="title">Title:</string>
    <string name="department">Department:</string>
    <string name="phone">Phone:</string>
    <string name="office">Office:</string>
    <string name="name">Name:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="fontys_logo">Fontys logo</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
</resources>
