<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_grade_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grade_sort_alphabetical"
        android:orderInCategory="2"
        android:title="@string/sort_alphabetical"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grade_sort_grade"
        android:orderInCategory="3"
        android:title="@string/sort_by_grade"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
