<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/news_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:id="@+id/news_card_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/thumbnail"/>

            <TextView
                android:id="@+id/news_card_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/news_card_title"
                android:layout_toEndOf="@+id/news_card_image"
                android:layout_toRightOf="@+id/news_card_image"
                android:paddingTop="8dp"
                android:text="@string/description_placeholder"/>

            <TextView
                android:id="@+id/news_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/news_card_image"
                android:layout_toRightOf="@+id/news_card_image"
                android:paddingTop="4dp"
                android:text="@string/header_placeholder"
                android:textStyle="bold"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>